fixed .countdown class name

--- a/docs/assets/css/yoshino-ui-core.css
+++ b/docs/assets/css/yoshino-ui-core.css
@@ -17368,7 +17368,7 @@ a:visited.btn.btn--outline.btn--positive {
   color: #629278;
 }
 /** countdown.less */
-.countdown-x {
+.countdown {
   background: #535251;
   border-radius: 6px;
   box-shadow: #3e3d3c 0 1px 0 inset;
