--- a/src/assets/less/elements/countdown.less
+++ b/src/assets/less/elements/countdown.less
@@ -3,7 +3,7 @@
 // block
 // =====
 
-.countdown-x {
+.countdown {
     background: @color-main-8;
     border-radius: 6px;
     box-shadow: @color-main-6 0 1px 0 inset;
