added .placeholder element

--- a/src/templates/pages/core/debug.html
+++ b/src/templates/pages/core/debug.html
@@ -12,4 +12,11 @@ Use the [option variables](/pages/theme/options.html) of your [theme](/pages/the
 
 {% endmarkdown %}
 
+<div class="documentation__block">
+    <div class="documentation__example" data-printcode="language:markup; print:true;">
+        <div class="placeholder w-10 h-15 m-2"></div>
+        <div class="placeholder w-20 h-30 m-2"></div>
+    </div>
+</div>
+
 {% endblock %}
