--- a/docs/assets/css/yoshino-ui-core.css
+++ b/docs/assets/css/yoshino-ui-core.css
@@ -388,6 +388,15 @@ textarea {
 }
 /** typography.less */
 /** debug.less */
+.placeholder {
+  background: linear-gradient(to top left, rgba(255, 255, 255, 0) 0%, rgba(255, 0, 0, 0) calc(50%), #ffffff 50%, rgba(255, 0, 0, 0) calc(50.5%), rgba(255, 255, 255, 0) 100%), linear-gradient(to top right, rgba(255, 255, 255, 0) 0%, rgba(255, 0, 0, 0) calc(50%), #ffffff 50%, rgba(255, 0, 0, 0) calc(50.5%), rgba(255, 255, 255, 0) 100%), rgba(255, 0, 0, 0.1);
+  border: rgba(255, 0, 0, 0.2) 1px solid;
+  box-sizing: border-box;
+  display: block;
+  min-height: 2rem;
+  min-width: 2rem;
+  overflow: hidden;
+}
 body::after {
   bottom: 0;
   content: 'none';
