--- a/src/assets/less/core/debug.less
+++ b/src/assets/less/core/debug.less
@@ -56,6 +56,32 @@ img[title=""] when (@debugImages = true) {
     outline-style: inset;
 }
 
+// placeholder containers
+// ======================
+
+.placeholder {
+    background:
+        linear-gradient(to top left,
+            rgba(255,255,255,0) 0%,
+            rgba(255,0,0,0) calc(50%),
+            rgba(255,255,255,1) 50%,
+            rgba(255,0,0,0) calc(50% + .5px),
+            rgba(255,255,255,0) 100%),
+        linear-gradient(to top right,
+            rgba(255,255,255,0) 0%,
+            rgba(255,0,0,0) calc(50%),
+            rgba(255,255,255,1) 50%,
+            rgba(255,0,0,0) calc(50% + .5px),
+            rgba(255,255,255,0) 100%),
+        rgba(255,0,0,.1);
+    border: rgba(255,0,0,.2) 1px solid;
+    box-sizing: border-box;
+    display: block;
+    min-height: 2rem;
+    min-width: 2rem;
+    overflow: hidden;
+}
+
 // media queries
 // =============
 
