--- a/docs/assets/css/yoshino-ui-core.css
+++ b/docs/assets/css/yoshino-ui-core.css
@@ -14828,6 +14828,9 @@ body {
 .fs-0 {
   font-size: 0 !important;
 }
+.fs-10 {
+  font-size: 1rem !important;
+}
 .fs-15 {
   font-size: 1.5rem !important;
 }
@@ -14854,6 +14857,9 @@ body {
 }
 .lh-0 {
   line-height: 0 !important;
+}
+.lh-10 {
+  line-height: 1.5rem !important;
 }
 .lh-15 {
   line-height: 1.5rem !important;
