--- a/src/assets/less/utilities/typography.less
+++ b/src/assets/less/utilities/typography.less
@@ -12,6 +12,7 @@
 // font-size
 
 .fs-0  { font-size: 0 !important;  }
+.fs-10 { font-size: 1rem !important; }
 .fs-15 { font-size: 1.5rem !important; }
 .fs-20 { font-size: 2rem !important; }
 .fs-25 { font-size: 2.5rem !important; }
@@ -24,6 +25,7 @@
 // line-height
 
 .lh-0  { line-height: 0 !important; }
+.lh-10 { line-height: 1.5rem !important; }
 .lh-15 { line-height: 1.5rem !important; }
 .lh-20 { line-height: 2rem !important; }
 .lh-25 { line-height: 2.5rem !important; }
