--- a/src/templates/pages/elements/breadcrumbs.html
+++ b/src/templates/pages/elements/breadcrumbs.html
@@ -19,23 +19,23 @@ breadcrumbs element does not have any modifier.
     <div class="documentation__example" data-printcode="language:markup; print:true;">
         <nav class="breadcrumbs">
             <ul>
-                <li>
-                    <a href="#">
-                        <span>Home Page</span>
+                <li class="breadcrumbs__item">
+                    <a class="breadcrumbs__link" href="#">
+                        <span class="breadcrumbs__label">Home Page</span>
                     </a>
                 </li>
-                <li>
-                    <a href="#">
-                        <span>Lorem Ipsum</span>
+                <li class="breadcrumbs__item">
+                    <a class="breadcrumbs__link" href="#">
+                        <span class="breadcrumbs__label">Lorem Ipsum</span>
                     </a>
                 </li>
-                <li>
-                    <a href="#">
-                        <span>Dolor Sit Amet</span>
+                <li class="breadcrumbs__item">
+                    <a class="breadcrumbs__link" href="#">
+                        <span class="breadcrumbs__label">Dolor Sit Amet</span>
                     </a>
                 </li>
-                <li>
-                    <span>Current Page</span>
+                <li class="breadcrumbs__item">
+                    <span class="breadcrumbs__label">Current Page</span>
                 </li>
             </ul>
         </nav>
